--- a/week4/index.html
+++ b/week4/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Special Bodies</title>
+    <link rel="stylesheet" href="./Style.css">
+    <h1> #id =" SPECIAL BODIES" </h1>
 </head>
-<body>
-    
+<body> class = "body"</body>
+</main>
+<h2 class ="About us" </h2>
+<p>This is a informational site that will provide parents of all ages of what they can do in order to make sure that their kids or family members with special needs have some resources in order to make sure that they stay active and provide tips on some healthy foods they should be eating.</p>
+<ol>
+	<li> Special Olympics </li>
+    <li> Videos           </li>
+    <li> Healthy Tips     </li>
+    <li> Activities       </li>
+    <li> Reconmendations  </li>
+</ol>
+
+<div> <img src= https://i.pinimg.com/originals/f2/d9/3d/f2d93d9a7c51facae097b9b29e1a30d6.jpg></div>
 </body>
 </html>
